--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -8,7 +8,7 @@
 body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,pre,form,fieldset,legend,button,input,textarea,th,td {
     outline:none;
     margin: 0;
-    padding: 0;
+    // padding: 0;
     list-style-type:none;
 }
 
